--- a/src/Buff God/Buff God.csproj
+++ b/src/Buff God/Buff God.csproj
@@ -37,6 +37,7 @@
     </Reference>
     <Reference Include="PoeHUD">
       <HintPath>..\..\..\PoeHUD.exe</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="SharpDX, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpDX.4.0.1\lib\net45\SharpDX.dll</HintPath>
