--- a/src/Buff God/Buff God.csproj
+++ b/src/Buff God/Buff God.csproj
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\..\PoEHUD\Release\plugins\Buff God\</OutputPath>
+    <OutputPath>..\..\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -75,9 +75,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BuffGod.cs" />
-    <Compile Include="ImGuiExtension.cs" />
+    <Compile Include="Helpers.cs" />
+    <Compile Include="Logging.cs" />
+    <Compile Include="Profiles.cs" />
+    <Compile Include="Render.cs" />
+    <Compile Include="Structs\BuffData.cs" />
+    <Compile Include="Core.cs" />
+    <Compile Include="Structs\Colors.cs" />
+    <Compile Include="Structs\CustomSearcher.cs" />
+    <Compile Include="Extensions\ImGuiExtension.cs" />
+    <Compile Include="Structs\Json.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="PluginSettings.cs" />
+    <Compile Include="Structs\Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Structs\Status.cs" />
+    <Compile Include="Structs\Buff.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -85,6 +98,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
